--- a/angular.json
+++ b/angular.json
@@ -317,7 +317,10 @@
             "tsConfig": "apps/client/tsconfig.app.json",
             "aot": true,
             "assets": ["apps/client/src/favicon.ico", "apps/client/src/assets"],
-            "styles": ["apps/client/src/styles.scss"],
+            "styles": [
+              "apps/client/src/styles.scss",
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
+            ],
             "scripts": []
           },
           "configurations": {
