--- a/package.json
+++ b/package.json
@@ -48,12 +48,14 @@
     "@nestjs/core": "^7.0.0",
     "@nestjs/mapped-types": "^2.0.2",
     "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/swagger": "4.7.0",
     "@ngrx/store": "10.0.1",
     "@nrwl/angular": "10.3.2",
     "concurrently": "^8.2.0",
     "json-server": "^0.17.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.5.5",
+    "swagger-ui-express": "^5.0.0",
     "uuid": "^9.0.0",
     "zone.js": "^0.10.2"
   },
