--- a/angular.json
+++ b/angular.json
@@ -447,11 +447,41 @@
           "style": "scss"
         }
       }
+    },
+    "testing": {
+      "projectType": "library",
+      "root": "libs/testing",
+      "sourceRoot": "libs/testing/src",
+      "prefix": "fem",
+      "architect": {
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "libs/testing/tsconfig.lib.json",
+              "libs/testing/tsconfig.spec.json"
+            ],
+            "exclude": ["**/node_modules/**", "!libs/testing/**/*"]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "options": {
+            "jestConfig": "libs/testing/jest.config.js",
+            "passWithNoTests": true
+          }
+        }
+      },
+      "schematics": {
+        "@schematics/angular:component": {
+          "style": "scss"
+        }
+      }
     }
   },
   "cli": {
     "defaultCollection": "@nrwl/angular",
-    "analytics": "40a09b6b-c5bf-4d65-955e-b50a74fe3d19"
+    "analytics": "8c35b00e-f2ac-408f-ba76-9f0e5c42f73d"
   },
   "schematics": {
     "@nrwl/workspace": {
