--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "nx": "nx",
     "start": "ng serve",
     "build": "ng build",
+    "build:stats": "ng build --stats-json",
+    "analyze": "webpack-bundle-analyzer dist/apps/dashboard/stats.json",
     "test": "ng test",
     "serve:json": "json-server server/db.json",
     "serve:api": "nx run api:serve",
@@ -60,6 +62,7 @@
     "rxjs": "~6.5.5",
     "swagger-ui-express": "^5.0.0",
     "uuid": "^9.0.0",
+    "webpack-bundle-analyzer": "^4.9.0",
     "zone.js": "^0.10.2"
   },
   "devDependencies": {
