feat: Added Docker

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "analyze": "webpack-bundle-analyzer dist/apps/dashboard/stats.json",
     "test": "ng test",
     "serve:json": "json-server server/db.json",
-    "serve:api": "nx run api:serve",
-    "serve:web": "ng serve --open",
+    "serve:api": "nx run api:serve --host 0.0.0.0",
+    "serve:web": "ng serve --host 0.0.0.0 --open",
     "serve:client": "nx run client:serve --port=4400 --open",
     "serve:all": "concurrently \"npm run serve:api\" \"npm run serve:web\"",
     "lint": "nx workspace-lint && ng lint",
